[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/SimCheckBox.gd" type="Script" id=1]
[ext_resource path="res://ui/reset.png" type="Texture" id=2]

[node name="SimCheckBox" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -488.0
margin_bottom = -636.0
script = ExtResource( 1 )

[node name="CheckBox" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 24.0
flat = true

[node name="Control" type="Control" parent="."]
margin_left = 28.0
margin_right = 280.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="."]
margin_left = 284.0
margin_right = 312.0
margin_bottom = 24.0
hint_tooltip = "Reset to default"
disabled = true
icon = ExtResource( 2 )
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
